Bugfixes: - Fixes mistake previously made with FLog not showing stacktraces properly - Fixes improperly set up commands causing the entire plugin to fall apart